force-app/main/default/objects/Contact/fields/Affiliations__c.field-meta.xml
<CustomField>
    <fullName>Affiliations__c</fullName>
    <label>Affiliations</label>
    <type>TextArea</type>
</CustomField>