force-app/main/default/objects/Contact/fields/Age_Child_2__c.field-meta.xml
<CustomField>
    <fullName>Age_Child_2__c</fullName>
    <label>Age Child 2</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>