force-app/main/default/objects/Contact/fields/Age_Child_3__c.field-meta.xml
<CustomField>
    <fullName>Age_Child_3__c</fullName>
    <label>Age Child 3</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>