force-app/main/default/objects/Contact/fields/Aircall_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Aircall_Mobile_Number__c</fullName>
    <label>Aircall Mobile Number</label>
    <type>Phone</type>
</CustomField>