force-app/main/default/objects/Contact/fields/Aircall_Phone_Format__c.field-meta.xml
<CustomField>
    <fullName>Aircall_Phone_Format__c</fullName>
    <formula>IF(BEGINS( Phone , &quot;+61&quot;), Phone,
IF(BEGINS( Phone , &quot;4&quot;),&quot;+61&quot; + Phone,
IF(BEGINS( Phone , &quot;0&quot;), &quot;+61&quot; + TRIM(RIGHT(Phone , LEN(Phone)-1 )),
IF(BEGINS( Phone , &quot;+610&quot;), &quot;+61&quot; + TRIM(RIGHT(Phone , LEN(Phone)-4 )),
IF(BEGINS( Phone , &quot;61&quot;),&quot;+&quot; + Phone,
Phone )))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aircall Phone Format</label>
    <type>Text</type>
</CustomField>