force-app/main/default/objects/Contact/fields/Aircall_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Aircall_Phone_Number__c</fullName>
    <label>Aircall Phone Number</label>
    <type>Phone</type>
</CustomField>