force-app/main/default/objects/Contact/fields/Are_you_tax_resident_of_foreign_country__c.field-meta.xml
<CustomField>
    <fullName>Are_you_tax_resident_of_foreign_country__c</fullName>
    <label>Are you tax resident of foreign country?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>