force-app/main/default/objects/Contact/fields/Authorised_Credit_Representative__c.field-meta.xml
<CustomField>
    <fullName>Authorised_Credit_Representative__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Authorised Credit Representative</label>
    <type>Checkbox</type>
</CustomField>