force-app/main/default/objects/Contact/fields/BillingAddress__c.field-meta.xml
<CustomField>
    <fullName>BillingAddress__c</fullName>
    <description>Compound field for Billing Address.</description>
    <formula>if( AND( ISPICKVAL($User.LanguageLocaleKey, &quot;ja&quot;) , NOT( ISBLANK(Account.BillingCountry )) ) , Account.BillingCountry &amp; br(), &quot;&quot; ) &amp;
            if(ISBLANK(Account.BillingStreet), &quot;&quot; , Account.BillingStreet &amp; br()) &amp;
            if(ISBLANK(Account.BillingCity), &quot;&quot; , Account.BillingCity&amp; &quot;, &quot;)&amp;
            if(ISBLANK(Account.BillingState), &quot;&quot; , Account.BillingState&amp; &quot; &quot;)&amp;
            if(ISBLANK(Account.BillingPostalCode), &quot;&quot; , Account.BillingPostalCode &amp; br()) &amp;
            if( OR( ISPICKVAL($User.LanguageLocaleKey, &quot;ja&quot;) , ISBLANK(Account.BillingCountry) ) , &quot;&quot; , Account.BillingCountry )</formula>
    <label>Billing Address</label>
    <type>Text</type>
</CustomField>