force-app/main/default/objects/Contact/fields/CFCU_Other__c.field-meta.xml
<CustomField>
    <fullName>CFCU_Other__c</fullName>
    <formula>Gambling_Betting_and_Lottery__c +   Other_Regular_Expenditure__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CFCU Other</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>