force-app/main/default/objects/Contact/fields/Child_Age__c.field-meta.xml
<CustomField>
    <fullName>Child_Age__c</fullName>
    <label>Child_Age</label>
    <length>10</length>
    <type>Text</type>
</CustomField>