force-app/main/default/objects/Contact/fields/Citizenship_Status__c.field-meta.xml
<CustomField>
    <fullName>Citizenship_Status__c</fullName>
    <label>Citizenship Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Australian Citizen</fullName>
            </value>
            <value>
                <fullName>Permanent Resident</fullName>
            </value>
            <value>
                <fullName>NZ Citizen</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>