force-app/main/default/objects/Contact/fields/Clothing_and_entertainment__c.field-meta.xml
<CustomField>
    <fullName>Clothing_and_entertainment__c</fullName>
    <label>Clothing_and_entertainment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>