force-app/main/default/objects/Contact/fields/Clothing_and_personal_care__c.field-meta.xml
<CustomField>
    <fullName>Clothing_and_personal_care__c</fullName>
    <label>Clothing and Personal Care Expenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>