force-app/main/default/objects/Contact/fields/Clothing_Recreational_Entertainment__c.field-meta.xml
<CustomField>
    <fullName>Clothing_Recreational_Entertainment__c</fullName>
    <formula>Entertainment_Dining_Out_Movies_Gift__c +  Sports_Hobbies_and_Memberships__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clothing, Recreational &amp; Entertainment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>