force-app/main/default/objects/Contact/fields/Connections_Phone_Mobile_Internet_C__c.field-meta.xml
<CustomField>
    <fullName>Connections_Phone_Mobile_Internet_C__c</fullName>
    <label>Connections Expenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>