force-app/main/default/objects/Contact/fields/Country_1__c.field-meta.xml
<CustomField>
    <fullName>Country_1__c</fullName>
    <label>Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>