force-app/main/default/objects/Contact/fields/CountryOfResidence__c.field-meta.xml
<CustomField>
    <fullName>CountryOfResidence__c</fullName>
    <label>CountryOfResidence</label>
    <length>100</length>
    <type>Text</type>
</CustomField>