force-app/main/default/objects/Contact/fields/Credit_Card_Payment_3_of_total_Limit__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Payment_3_of_total_Limit__c</fullName>
    <label>Credit Card Payment (3% of total Limit)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>