force-app/main/default/objects/Contact/fields/Credit_commitments_up_to_date__c.field-meta.xml
<CustomField>
    <fullName>Credit_commitments_up_to_date__c</fullName>
    <label>Credit commitments up to date?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>