force-app/main/default/objects/Contact/fields/CreditCardsCommitments__c.field-meta.xml
<CustomField>
    <fullName>CreditCardsCommitments__c</fullName>
    <label>CreditCardsCommitments</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>