force-app/main/default/objects/Contact/fields/Current_VOI_stage__c.field-meta.xml
<CustomField>
    <fullName>Current_VOI_stage__c</fullName>
    <label>Current VOI stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DL Section</fullName>
                <default>true</default>
                <label>DL Section</label>
            </value>
            <value>
                <fullName>Video Section</fullName>
            </value>
            <value>
                <fullName>E-sign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>