force-app/main/default/objects/Contact/fields/CurrentEmployer__c.field-meta.xml
<CustomField>
    <fullName>CurrentEmployer__c</fullName>
    <label>CurrentEmployer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>