force-app/main/default/objects/Contact/fields/Declaration__c.field-meta.xml
<CustomField>
    <fullName>Declaration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Declaration</label>
    <type>Checkbox</type>
</CustomField>