force-app/main/default/objects/Contact/fields/Declaration_Signed_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Declaration_Signed_DateTime__c</fullName>
    <label>Declaration Signed DateTime</label>
    <type>DateTime</type>
</CustomField>