force-app/main/default/objects/Contact/fields/Decription_income_in_next_6_12_months__c.field-meta.xml
<CustomField>
    <fullName>Decription_income_in_next_6_12_months__c</fullName>
    <label>Decription income in next 6-12 months</label>
    <type>TextArea</type>
</CustomField>