force-app/main/default/objects/Contact/fields/Description_Credit_commitment_up_to_date__c.field-meta.xml
<CustomField>
    <fullName>Description_Credit_commitment_up_to_date__c</fullName>
    <label>Description Credit commitment up to date</label>
    <type>TextArea</type>
</CustomField>