force-app/main/default/objects/Contact/fields/Description_Income_expenses_6_12_months__c.field-meta.xml
<CustomField>
    <fullName>Description_Income_expenses_6_12_months__c</fullName>
    <label>Description Income/expenses 6-12 months</label>
    <type>TextArea</type>
</CustomField>