force-app/main/default/objects/Contact/fields/Description_Judgement_legal_proceeding__c.field-meta.xml
<CustomField>
    <fullName>Description_Judgement_legal_proceeding__c</fullName>
    <label>Description Judgement/legal proceeding</label>
    <type>TextArea</type>
</CustomField>