force-app/main/default/objects/Contact/fields/Description_materially_next_6_12_months__c.field-meta.xml
<CustomField>
    <fullName>Description_materially_next_6_12_months__c</fullName>
    <label>Description materially next 6-12 months</label>
    <type>TextArea</type>
</CustomField>