force-app/main/default/objects/Contact/fields/Description_resident_of_foreign_country__c.field-meta.xml
<CustomField>
    <fullName>Description_resident_of_foreign_country__c</fullName>
    <label>Description resident of foreign country</label>
    <type>TextArea</type>
</CustomField>