force-app/main/default/objects/Contact/fields/Do_you_own_any_other_property__c.field-meta.xml
<CustomField>
    <fullName>Do_you_own_any_other_property__c</fullName>
    <label>Do you own any other property</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>