force-app/main/default/objects/Contact/fields/Does_your_spouse_earn_an_income__c.field-meta.xml
<CustomField>
    <fullName>Does_your_spouse_earn_an_income__c</fullName>
    <label>Does your spouse earn an income</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>