force-app/main/default/objects/Contact/fields/Dont_have_drivers_licence__c.field-meta.xml
<CustomField>
    <fullName>Dont_have_drivers_licence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Don&apos;t have driver&apos;s licence</label>
    <type>Checkbox</type>
</CustomField>