force-app/main/default/objects/Contact/fields/Driver_s_licence_state_Territory__c.field-meta.xml
<CustomField>
    <fullName>Driver_s_licence_state_Territory__c</fullName>
    <label>Driver&apos;s licence state &amp; Territory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Queensland</fullName>
            </value>
            <value>
                <fullName>New South Wales</fullName>
            </value>
            <value>
                <fullName>Australian Capital Territory</fullName>
            </value>
            <value>
                <fullName>Victoria</fullName>
            </value>
            <value>
                <fullName>South Australia</fullName>
            </value>
            <value>
                <fullName>Western Australia</fullName>
            </value>
            <value>
                <fullName>Tasmania</fullName>
            </value>
            <value>
                <fullName>Northern Territory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>