force-app/main/default/objects/Contact/fields/Education_and_childcare__c.field-meta.xml
<CustomField>
    <fullName>Education_and_childcare__c</fullName>
    <label>Education and childcare</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>