force-app/main/default/objects/Contact/fields/Education_ChildCare_SchoolFees_Uniform__c.field-meta.xml
<CustomField>
    <fullName>Education_ChildCare_SchoolFees_Uniform__c</fullName>
    <label>Childcare Expenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>