force-app/main/default/objects/Contact/fields/Education_public_and_private__c.field-meta.xml
<CustomField>
    <fullName>Education_public_and_private__c</fullName>
    <label>Education Expenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>