force-app/main/default/objects/Contact/fields/EmailVerified__c.field-meta.xml
<CustomField>
    <fullName>EmailVerified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EmailVerified</label>
    <type>Checkbox</type>
</CustomField>