force-app/main/default/objects/Contact/fields/Entertainment_Dining_Out_Movies_Gift__c.field-meta.xml
<CustomField>
    <fullName>Entertainment_Dining_Out_Movies_Gift__c</fullName>
    <label>Entertainment Expenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>