force-app/main/default/objects/Contact/fields/FaxVerified__c.field-meta.xml
<CustomField>
    <fullName>FaxVerified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fax Verified</label>
    <type>Checkbox</type>
</CustomField>