force-app/main/default/objects/Contact/fields/FinServ__MaritalStatus__c.field-meta.xml
<CustomField>
    <fullName>FinServ__MaritalStatus__c</fullName>
    <label>Marital Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Married</fullName>
            </value>
            <value>
                <fullName>Separated</fullName>
            </value>
            <value>
                <fullName>Divorced</fullName>
            </value>
            <value>
                <fullName>Widowed</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Married / defacto</fullName>
            </value>
            <value>
                <fullName>Married / Defacto (to applicant 2)</fullName>
            </value>
            <value>
                <fullName>Married / Defacto (to applicant 1)</fullName>
            </value>
            <value>
                <fullName>Married / defacto (non-applicant)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>