force-app/main/default/objects/Contact/fields/First_Name_Child_1__c.field-meta.xml
<CustomField>
    <fullName>First_Name_Child_1__c</fullName>
    <label>First Name Child 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>