force-app/main/default/objects/Contact/fields/First_Name_Child_2__c.field-meta.xml
<CustomField>
    <fullName>First_Name_Child_2__c</fullName>
    <label>First Name Child 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>