force-app/main/default/objects/Contact/fields/First_Name_Child_3__c.field-meta.xml
<CustomField>
    <fullName>First_Name_Child_3__c</fullName>
    <label>First Name Child 3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>