force-app/main/default/objects/Contact/fields/Food_Groceries_Meat_Fruit_Vegetabl__c.field-meta.xml
<CustomField>
    <fullName>Food_Groceries_Meat_Fruit_Vegetabl__c</fullName>
    <label>Groceries Expenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>