force-app/main/default/objects/Contact/fields/Formatted_DOB__c.field-meta.xml
<CustomField>
    <fullName>Formatted_DOB__c</fullName>
    <formula>TEXT(DAY(Birthdate ))+&quot;-&quot; +TEXT(MONTH(Birthdate ))+&quot;-&quot; +TEXT(YEAR(Birthdate ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formatted DOB</label>
    <type>Text</type>
</CustomField>