force-app/main/default/objects/Contact/fields/Gambling_Betting_and_Lottery__c.field-meta.xml
<CustomField>
    <fullName>Gambling_Betting_and_Lottery__c</fullName>
    <label>Gambling Expenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>