force-app/main/default/objects/Contact/fields/Government_ID__c.field-meta.xml
<CustomField>
    <fullName>Government_ID__c</fullName>
    <label>Government ID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>Card</fullName>
            </value>
            <value>
                <fullName>driving licence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>