force-app/main/default/objects/Contact/fields/Govt_Id_Number__c.field-meta.xml
<CustomField>
    <fullName>Govt_Id_Number__c</fullName>
    <label>Govt Id Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>