force-app/main/default/objects/Contact/fields/Groceries_transport__c.field-meta.xml
<CustomField>
    <fullName>Groceries_transport__c</fullName>
    <label>Groceries &amp; transport Expenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>