force-app/main/default/objects/Contact/fields/HECS_HELP_debt__c.field-meta.xml
<CustomField>
    <fullName>HECS_HELP_debt__c</fullName>
    <label>HECS / HELP debt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>