force-app/main/default/objects/Contact/fields/Home_Loan_Repayment__c.field-meta.xml
<CustomField>
    <fullName>Home_Loan_Repayment__c</fullName>
    <label>Home Loan Repayment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>