force-app/main/default/objects/Contact/fields/Household_Purchases_and_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Household_Purchases_and_Maintenance__c</fullName>
    <label>Household Purchases and Maintenance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>