force-app/main/default/objects/Contact/fields/ID_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>ID_Card_Number__c</fullName>
    <label>ID Card Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>